// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeIdHandler applies anchor record correctly 1`] = `
Object {
  "anchorProof": Object {
    "blockNumber": 123456,
  },
  "anchorStatus": 2,
  "content": Object {
    "other": "data",
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "3id",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    "cid2",
    "cid3",
  ],
  "owners": Array [
    "0x123",
  ],
  "signature": 2,
}
`;

exports[`ThreeIdHandler applies genesis record correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "3id",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
  ],
  "nextContent": null,
  "owners": Array [
    "0x123",
  ],
  "signature": 0,
}
`;

exports[`ThreeIdHandler applies signed record correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "other": "data",
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "3id",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    "cid2",
  ],
  "nextContent": Object {
    "other": "data",
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "owners": Array [
    "0x123",
  ],
  "signature": 2,
}
`;
